# tugraph-analytics

./: README.md  README_cn.md
.github/workflows/: ci-py311.yml
geaflow-ai/plugins/casts/: .gitignore  README.md  pyproject.toml
geaflow-ai/plugins/casts/core/: config.py  constants.py  gremlin_state.py  interfaces.py  models.py  schema.py  strategy_cache.py  types.py
geaflow-ai/plugins/casts/data/: graph_generator.py  real_graph_loader.py  sources.py
geaflow-ai/plugins/casts/docs/: dependency_licenses.md  mathematical_modeling.md
geaflow-ai/plugins/casts/services/: embedding.py  llm_oracle.py  path_judge.py
geaflow-ai/plugins/casts/simulation/: engine.py  evaluator.py  executor.py  metrics.py  runner.py  visualizer.py
geaflow-ai/plugins/casts/tests/: conftest.py  test_execution_lifecycle.py  test_gremlin_step_state_machine.py  test_lifecycle_integration.py  test_metrics_collector.py  test_signature_abstraction.py  test_simple_path.py  test_starting_node_selection.py  test_threshold_calculation.py
geaflow-ai/plugins/casts/utils/: helpers.py
geaflow-ai/src/main/java/org/apache/geaflow/ai/: GeaFlowMemoryServer.java  GraphMemoryServer.java
geaflow-ai/src/main/java/org/apache/geaflow/ai/service/: ServerMemoryCache.java
geaflow/geaflow-common/src/main/java/org/apache/geaflow/common/metric/: CycleMetrics.java  ShuffleReadMetrics.java  ShuffleWriteMetrics.java
geaflow/geaflow-dsl/geaflow-dsl-connector/geaflow-dsl-connector-elasticsearch/: pom.xml
geaflow/geaflow-dsl/geaflow-dsl-parser/src/test/resources/: IsoGQLSame.sql
geaflow/geaflow-dsl/geaflow-dsl-runtime/src/test/resources/expect/: gql_algorithm_louvain.txt
geaflow/geaflow-dsl/geaflow-dsl-runtime/src/test/resources/query/: gql_algorithm_louvain.sql
geaflow/geaflow-memory/src/main/java/org/apache/geaflow/memory/: AbstractMemoryPool.java
geaflow/geaflow-utils/src/main/java/org/apache/geaflow/utils/math/: MathUtil.java
geaflow/geaflow-utils/src/test/java/org/apache/geaflow/utils/math/: MathUtilTest.java
(+28 files in other folders)
