[project]
name = "CASTS"
version = "0.1.0"
description = "CASTS: ..."
authors = [
    {name = "Kuda", email = "kuda@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.86.0",
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
    "python-dotenv>=0.21.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.19.1",
    "types-networkx>=3.6.1.20251220",
    "ruff>=0.14.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "mypy>=1.18.1",
]
service = [
    "flask==3.1.1",
    "flask-sqlalchemy==3.1.1",
    "flask-cors==6.0.1",
]
test = [
    "pytest==8.4.0",
    "pytest-cov==6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "EXE",
]
ignore = [
    "UP006",    # use List not list
    "UP035",
    "UP007",
    "UP045",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "auto"  # Enable asyncio mode
markers = [
    "asyncio: mark test as async"
]

[dependency-groups]
test = [
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core", "core.*",
    "data", "data.*",
    "services", "services.*",
    "simulation", "simulation.*",
    "utils", "utils.*",
]

[project.scripts]
casts-sim = "simulation.runner:main"
